--- a/src/setup/elements.css
+++ b/src/setup/elements.css
@@ -3,11 +3,11 @@
 }
 
 a {
-  color: var(--color-link);
+  color: var(--color-link-text);
   text-decoration: none;
 
   &:hover {
-    color: var(--color-link-hover);
+    color: var(--color-link-text-hover);
     text-decoration: underline;
   }
 }
